--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/app-bridge": "^2.0.24",
+    "@shopify/app-bridge-react": "^2.0.24",
+    "@shopify/app-bridge-utils": "^2.0.24",
+    "@shopify/polaris": "^9.4.0",
+    "@shopify/polaris-icons": "^4.18.4",
+    "@shopify/shopify-api": "^3.0.1",
     "next": "12.1.5",
+    "next-connect": "^0.12.2",
+    "pino": "^7.11.0",
+    "raw-body": "^2.5.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
