--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^6.19.7",
     "@shopify/app-bridge": "^2.0.24",
     "@shopify/app-bridge-react": "^2.0.24",
     "@shopify/app-bridge-utils": "^2.0.24",
     "@shopify/polaris": "^9.4.0",
     "@shopify/polaris-icons": "^4.18.4",
     "@shopify/shopify-api": "^3.0.1",
+    "aws-sdk": "^2.1130.0",
+    "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "next-connect": "^0.12.2",
     "pino": "^7.11.0",
