--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.87.0",
+    "@aws-sdk/lib-dynamodb": "^3.87.0",
     "@sentry/nextjs": "^6.19.7",
     "@shopify/app-bridge": "^2.0.24",
     "@shopify/app-bridge-react": "^2.0.24",
